# ai-gateway

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README_EN.md  config.toml  dashboard-prototype.html
.github/workflows/: release.yml
.mimocode/: .cron-lock
.mimocode/command/: tauri-build.md
.mimocode/plans/: 1784257755693-neon-star.md
.mimocode/skills/frontend-rebuild/: SKILL.md
.mimocode/skills/version-release/: SKILL.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  ThemeContext.tsx  api.ts  i18n.ts  main.tsx  presets.ts  styles.css  theme.ts
frontend/src/components/: EmptyState.tsx  PageLayout.tsx  SectionCard.tsx  StatCard.tsx
frontend/src/pages/: ApiKeys.tsx  Dashboard.tsx  Models.tsx  Platforms.tsx  Proxies.tsx  Settings.tsx
src/: cache.rs  config.rs  error.rs  lib.rs  main.rs
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/api/: api_key.rs  mod.rs  model.rs  platform.rs  proxy.rs  route.rs  settings.rs  stats.rs
src/db/: api_key.rs  mod.rs  model.rs  platform.rs  proxy.rs  route.rs  schema.rs  stats.rs
src/lb/: mod.rs  strategy.rs
src/models/: api_key.rs  mod.rs  model.rs  platform.rs  proxy.rs  route.rs  stats.rs
src/protocol/: anthropic.rs  mod.rs  openai.rs  types.rs
src/proxy/: handler.rs  mod.rs
