[package]
name = "ai-gateway"
version = "1.0.1"
edition = "2021"
description = "AI API Gateway - 跨平台AI接口聚合与负载均衡工具"

[lib]
name = "ai_gateway"
path = "src/lib.rs"

[[bin]]
name = "ai-gateway"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-files = "0.6"
actix-rt = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rand = "0.8"
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
tokio-stream = "0.1"
bytes = "1"
thiserror = "1"
parking_lot = "0.12"
dashmap = "5"
base64 = "0.22"
aes-gcm = "0.10"
hex = "0.4"
once_cell = "1"

# 在 Cargo.toml 底部添加
[profile.dev]
# 让依赖包使用优化级别 2，这样它们运行更快，但不会像 release 那么慢
opt-level = 2 
# 或者只针对特定的重型依赖开启优化
[profile.dev.package."*"]
opt-level = 2
